--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="./assets/css/normalize.css">
     <link rel="stylesheet" href="./assets/css/app.css">
 
-    <title>Super cleaner</title>
+    <title>The Trip</title>
 </head>
 <body>
-    <canvas id="canvas"></canvas>
+    <canvas class="game-canvas" ></canvas>
 
-    <script type="module" src="./build/app.js"></script>
+      <!-- Scripts -->
+      <script type="module" src="./build/app.js"></script>
 </body>
 </html>
